@@ -1,3 +1,10 @@
+2003-12-05  Ian Campbell  <icampbell@arcom.com>
+
+	* src/decompress.c: Ensure that free'd blocks are returned to the
+	free pool and that adjacent free blocks are merged. Initialise the
+	pool in _zlib_init() so that things are initialised even when
+	gzip_init hasn't been called.
+
 2003-12-05  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/io.c (_rb_gets_preloaded): ^A could have moved the cursor to
